Don't run an execute process command if the working dir is unknown

BUG: 287805